# galatea-legacy

./: CMakeLists.txt  README.markdown
src/: ControlSurface.cpp  ControlSurface.h  InputHandler.cpp  InputHandler.h  IntBox.cpp  IntBox.h  LibinputManager.cpp  LibinputManager.h  MainGUI.cpp  MainGUI.h  MidiSender.cpp  MidiSender.h  NumberBox.cpp  NumberBox.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PressureDetector.cpp  PressureDetector.h  Processor.cpp  Processor.h  Settings.cpp  Settings.h  SettingsWindow.cpp  SettingsWindow.h
